--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul>
         <li>
           <a href="https://github.com/solidesolid" target="_blank"
-            >Meus projetoaaas</a
+            >Meus projetos</a
           >
         </li>
 
