add animation and hover to switch

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <li>
           <a href="https://www.youtube.com/@enosfontes" target="_blank"
-            >Se inscrevam no canal!</a
+            >Se inscreva no canal!</a
           >
         </li>
 
