change light mode profile image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id=""></div>
       <div id="profile">
-        <img src="assets/avatar.png" alt="Foto na praia" />
+        <img src="assets/avatar-light.png" alt="Foto na praia" />
         <p>@sonaaguanelinks</p>
       </div>
       <div id="switch" onclick="toggleMode()">
